--- a/Snacktacular/Base.lproj/Main.storyboard
+++ b/Snacktacular/Base.lproj/Main.storyboard
@@ -274,7 +274,11 @@
                         </constraints>
                     </view>
                     <toolbarItems>
-                        <barButtonItem title="Look Up Place" id="lG9-vc-KcY"/>
+                        <barButtonItem title="Look Up Place" id="lG9-vc-KcY">
+                            <connections>
+                                <action selector="locationButtonPressed:" destination="ony-JX-ATJ" id="yb6-2x-utJ"/>
+                            </connections>
+                        </barButtonItem>
                     </toolbarItems>
                     <navigationItem key="navigationItem" id="Wn7-Wc-Ect">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="KzH-Js-TOW">
