--- a/Snacktacular/Base.lproj/Main.storyboard
+++ b/Snacktacular/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="Snacktacular" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -34,7 +34,7 @@
             <objects>
                 <viewController id="SbL-sd-sJz" customClass="SpotListViewController" customModule="Snacktacular" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TDi-AA-pPh">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jFK-Di-sdL">
@@ -738,7 +738,7 @@
                         <outlet property="nameLabel" destination="afi-ht-drk" id="wfW-hR-GFg"/>
                         <outlet property="postedByLabel" destination="MLT-Xy-M40" id="79a-fd-RoM"/>
                         <outlet property="reviewDateLabel" destination="eSh-jD-kd8" id="GSd-iI-Cq5"/>
-                        <outlet property="reviewTextField" destination="Buf-T5-aBn" id="7VS-T4-FqK"/>
+                        <outlet property="reviewTextView" destination="Buf-T5-aBn" id="7VS-T4-FqK"/>
                         <outlet property="reviewTitleField" destination="jIF-cT-KWH" id="yl0-1r-TPC"/>
                         <outlet property="saveBarButton" destination="gAt-sm-7Tq" id="uR8-RE-vRL"/>
                     </connections>
